<resources>
    <!-- GLOBAL -->
    <string name="app_name">CEFilm</string>
    <string name="na">N/A</string>
    <string name="network_error">Device is not connected to network, please check your network settings.</string>

    <!-- MAIN VIEW -->
    <string name="main_welcome">Hello %s !</string>
    <string name="main_movies_title">Favorite movies</string>
    <string name="main_search">Search</string>

    <!-- MOVIE VIEW -->
    <string name="movie_title">Movie</string>
    <string name="movie_about">About</string>
    <string name="movie_more_synopsis">More</string>
    <string name="movie_less_synopsis">Less</string>
    <string name="movie_director">Director</string>
    <string name="movie_actors">Actors</string>
    <string name="movie_awards">Awards</string>
    <string name="movie_load_error">Unable to retrieve move description</string>

    <!-- MOVIE VIEW (COMPONENT) -->
    <string name="movie_item_view_release">Released : %s</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
